objects/orders__x.object
<CustomObject>
    <description>orders</description>
    <externalDataSource>Orders_via_MuleSoft</externalDataSource>
    <externalName>orders</externalName>
    <fields>
        <fullName>accountId__c</fullName>
        <description>accountId</description>
        <externalDeveloperName>accountId</externalDeveloperName>
        <label>accountId</label>
        <length>10</length>
        <referenceTargetField>Account.External_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders_via_Mulesoft</relationshipLabel>
        <relationshipName>Orders_via_Mulesoft</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>caseId__c</fullName>
        <description>caseId</description>
        <externalDeveloperName>caseId</externalDeveloperName>
        <label>caseId</label>
        <length>10</length>
        <referenceTargetField>Case.External_ID__c</referenceTargetField>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Orders_via_Mulesoft</relationshipLabel>
        <relationshipName>Orders_via_Mulesoft</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orderDate__c</fullName>
        <description>orderDate</description>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>orderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sourceSystem__c</fullName>
        <description>sourceSystem</description>
        <externalDeveloperName>sourceSystem</externalDeveloperName>
        <label>sourceSystem</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalPrice__c</fullName>
        <description>totalPrice</description>
        <externalDeveloperName>totalPrice</externalDeveloperName>
        <label>totalPrice</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>trackingNumber__c</fullName>
        <description>trackingNumber</description>
        <externalDeveloperName>trackingNumber</externalDeveloperName>
        <label>trackingNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order via Mulesoft</label>
    <pluralLabel>Orders via Mulesoft</pluralLabel>
</CustomObject>